--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,11 @@
   "dependencies": {
     "cors": "^2.8.4",
     "firebase-admin": "^4.2.1",
-    "firebase-functions": "^0.5.7"
+    "firebase-functions": "^0.5.7",
+    "web-push": "^3.2.2"
   },
-  "private": true
+  "private": true,
+  "scripts": {
+    "web-push": "web-push"
+  }
 }
